# Halatafl

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Sources/: board.cpp  fox.cpp  main.cpp  manager.cpp  sheep.cpp
include/: board.h  fox.h  manager.h  sheep.h
tests/: testBlitzHalataflFifteen.cpp  testBlitzHalataflFive.cpp  testBlitzHalataflNineteen.cpp  testBlitzHalataflTen.cpp  testBlitzHalataflTwenty.cpp  testBlitzHalataflTwentyFive.cpp  testBlitzHalataflZero.cpp  testFoxDoubleJump.cpp  testFoxSingleJump.cpp  testFoxSurrounded.cpp  testFoxesWin.cpp  testFoxesWinAfterMove.cpp  testSheepMoveBackwards.cpp  testSheepMoveDiagonally.cpp  testSheepMoveForward.cpp  testSheepMoveNonExistent.cpp  testSheepMoveOffBoard.cpp  testSheepMoveSideways.cpp  testSheepMoveSidewaysBlocked.cpp  testSheepWin.cpp
